Added CountInversions algorithm implementation.